# serializer version: 1
# name: test_sms_html[bo]
  '''
  <!DOCTYPE html>
  <html>
  
  <head>
    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
    <link rel="shortcut icon" href="https://svn.spraakdata.gu.se/sb-arkiv/pub/images/saldo_icon.png">
    <link rel="stylesheet" type="text/css" href="http://testserver/static/saldo.css" />
    <title>Sammansättningsanalys för &#39;bo&#39;</title>
    
    <script src="https://unpkg.com/htmx.org@1.9.8" crossorigin="anonymous"></script>
  </head>
  
  
    <body>
      
      <center>
        <p>
          <a href="https://spraakbanken.gu.se/saldo"><img
              src="https://spraakbanken.gu.se/sites/spraakbanken.gu.se/files/img/saldo/saldo.gif" align="top"
              alt="SALDO" /></a>
        </p>
  
        <script>
          function input_handler(e) {
            var word = document.getElementById('input').value;
            if (word.length > 0) {
              location.href = 'https://spraakbanken.gu.se/ws/saldo-ws//html/' + encodeURIComponent(word);
            }
          }
  
        </script>
        <p><a href="https://svn.spraakdata.gu.se/repos/sblex/pub/saldo_instruktion.pdf">dokumentation (pdf)</a></p>
        
      </center>
  
      <div id="output_table">
        
  
  <center><b>"bo"</b> saknar analys.</center>
  
  
      </div>
    </body>
  
  </html>
  '''
# ---
# name: test_sms_html[dv\xe4ljas]
  '''
  <!DOCTYPE html>
  <html>
  
  <head>
    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
    <link rel="shortcut icon" href="https://svn.spraakdata.gu.se/sb-arkiv/pub/images/saldo_icon.png">
    <link rel="stylesheet" type="text/css" href="http://testserver/static/saldo.css" />
    <title>Sammansättningsanalys för &#39;dväljas&#39;</title>
    
    <script src="https://unpkg.com/htmx.org@1.9.8" crossorigin="anonymous"></script>
  </head>
  
  
    <body>
      
      <center>
        <p>
          <a href="https://spraakbanken.gu.se/saldo"><img
              src="https://spraakbanken.gu.se/sites/spraakbanken.gu.se/files/img/saldo/saldo.gif" align="top"
              alt="SALDO" /></a>
        </p>
  
        <script>
          function input_handler(e) {
            var word = document.getElementById('input').value;
            if (word.length > 0) {
              location.href = 'https://spraakbanken.gu.se/ws/saldo-ws//html/' + encodeURIComponent(word);
            }
          }
  
        </script>
        <p><a href="https://svn.spraakdata.gu.se/repos/sblex/pub/saldo_instruktion.pdf">dokumentation (pdf)</a></p>
        
      </center>
  
      <div id="output_table">
        
  
  <center>
      <table>
          
          <tr>
              <td>
                  
                  <b>dväljas</b>:(<a href="http://testserver/lid/html/dväljas..vb.1">dväljas..vb.1</a>,inf s-form)
                  
                  
              </td>
          </tr>
          
      </table>
  </center>
  
  
      </div>
    </body>
  
  </html>
  '''
# ---
